# hydra-bot

./: .gitignore  BinanceBOT.py  EnigmaCracker.py  EnigmaCracker_ADA.py  EnigmaCracker_ETH.py  EnigmaCracker_SOL.py  EnigmaCracker_V2.py  analizar_datos.py  bot_config.json  bruteforce_permutations.py  diagnostico_ia.txt  guardian.py  kaggle_hydra_opt.py  listar_modelos.py  paper_trader.py  range_bot_binance.py  recolector.py  recolector_macro.py  simulador.py  simulador_gestor.py  simulador_macro.py  simulador_superhidra.py  validador_oos_local.py  ver_trades_numba.py
colab-package/: Cargo.toml  EnigmaCracker_Colab.ipynb
colab-package/src/: main.rs
core/: gestor.py
enigma-bench/: Cargo.toml
enigma-bench/src/: main.rs
enigma-rust/: Cargo.toml
enigma-rust/src/: bloom_gen.rs  main.rs
estrategias/: base.py  cerebro.py  cruce_simple.py  ehmt_trend.py  rsi_rebound.py  super_hidra.py  tvb_breakout.py
laboratorio_extremo/: evaluador_supervivencia.py  generador_asesino.py  generador_caos.py  generador_liquidacion.py  generador_realista.py  generador_sierra.py
